src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBMapBufferRange_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBMapBufferRange_StringErrorContext.class */
public final class ARBMapBufferRange_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMapBufferRange(IJJI)J", "net/labymod/core/laby3d/opengl/error/generated/ARBMapBufferRangeErrorContext");
        methods.put("glMapBufferRange(IJJI)Ljava/nio/ByteBuffer;", "net/labymod/core/laby3d/opengl/error/generated/ARBMapBufferRangeErrorContext");
        methods.put("glMapBufferRange(IJJILjava/nio/ByteBuffer;)Ljava/nio/ByteBuffer;", "net/labymod/core/laby3d/opengl/error/generated/ARBMapBufferRangeErrorContext");
        methods.put("glFlushMappedBufferRange(IJJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMapBufferRangeErrorContext");
        return methods;
    }
}
